[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
trace = ["gdext-class/trace"]

[dependencies]
gdext-sys = { path = "../../gdext-sys" }
gdext-builtin = { path = "../../gdext-builtin", features = ["convenience"] }
gdext-class = { path = "../../gdext-class", features = ["convenience"] }
gdext-macros = { path = "../../gdext-macros" }
