[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
trace = ["godot-core/trace"]

[dependencies]
godot-ffi = { path = "../../godot-ffi" }
godot-core = { path = "../../godot-core", features = ["convenience"] }
godot-macros = { path = "../../godot-macros" }
