[package]
name = "itest"
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
# Default feature MUST be empty for workflow reasons, even if it differs from the default feature set in upstream `godot` crate, and *even*
# if it breaks `cargo build` on entire workspace. Use `cargo build -p itest` instead, or consider fixing the issue by dynamically emitting
# a cfg in itest, when full codegen is enabled. See https://github.com/godot-rust/gdext/pull/771#issuecomment-2752543562.
default = []

codegen-full = ["godot/__codegen-full"]
codegen-full-experimental = ["codegen-full", "godot/experimental-godot-api"]
experimental-threads = ["godot/experimental-threads"]
register-docs = ["godot/register-docs"]
serde = ["dep:serde", "dep:serde_json", "godot/serde"]

# Do not add features here that are 1:1 forwarded to the `godot` crate, unless they are needed by itest itself.
# Instead, compile itest with `--features godot/my-feature`.

[dependencies]
godot = { path = "../../godot", default-features = false, features = ["__trace"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[build-dependencies]
godot = { path = "../../godot", default-features = false } # __emit_codegen_cfg
godot-bindings = { path = "../../godot-bindings" } # emit_godot_version_cfg
repo-tweak = { path = "../repo-tweak" }

# Minimum versions compatible with -Zminimal-versions
proc-macro2 = "1.0.80" # Literal::c_string() added in 1.0.80.
quote = "1.0.29"
