[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdext-sys = { path = "../../gdext-rust/gdext-sys" }
gdext-builtin = { path = "../../gdext-rust/gdext-builtin" }
gdext-class = { path = "../../gdext-rust/gdext-class" }