[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = []
trace = ["gdext-class/trace"]

[dependencies]
gdext-sys = { path = "../../gdext-sys" }
gdext-builtin = { path = "../../gdext-builtin" }
gdext-class = { path = "../../gdext-class" }

[profile.dev]
debug = 2
