[package]
name = "hot-reload"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MPL-2.0"
publish = false

[lib]
# The `rlib` type is not necessary for hot reload, but is used by the `discovery` crate.
crate-type = ["cdylib", "rlib"]

[dependencies]
godot = { path = "../../../godot", default-features = false }
